bugfix: scroll first item hidden on mobile

--- a/main.css
+++ b/main.css
@@ -595,7 +595,7 @@ header {
       gap: 20px;
       justify-content: space-evenly;
       /* align-items: center; */
-      overflow-x: scroll;
+      overflow-x: auto;
       padding: 10px 0;
       scroll-behavior: smooth;
       width: 100%;
@@ -607,7 +607,9 @@ header {
       scrollbar-width: none;    
 }
 
-
+.container::-webkit-scrollbar, .events-container::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Edge */
+}
 
 .card {
   color: var(--color-purple-variant-one);
